--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Database\Creation\DbCreation.cs" />
     <Compile Include="Database\Creation\DbHelper.cs" />
     <Compile Include="Database\PPMapper.cs" />
+    <Compile Include="Database\Project\Model\FilterApplied.cs" />
     <Compile Include="Database\SQLiteMigration\DBBase.cs" />
     <Compile Include="Database\SQLiteMigration\Global\GlobalDb.cs" />
     <Compile Include="Database\SQLiteMigration\Global\Model\DbVersion.cs" />
@@ -314,6 +315,7 @@
     <Content Include="7zip\7zip_License.txt" />
     <Content Include="Database\Creation\SQL\DbSetup_A_CreateRole.sql" />
     <Content Include="Database\Creation\Readme.txt" />
+    <Content Include="Database\Project\SQL\8\ProjectSetup_8_1.sql" />
     <Content Include="Database\SQLiteMigration\Readme.txt" />
     <Content Include="webpack.config.js" />
     <Content Include="www\404.html" />
